[gd_scene load_steps=5 format=2]

[ext_resource path="res://Exports/audio/piece_drag.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Pieces/piece.gd" type="Script" id=2]
[ext_resource path="res://Exports/audio/piece_select.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 120 )

[node name="Piece" type="Area2D" groups=["pieces"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="piece_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="piece_drag" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "SFX"

[connection signal="input_event" from="." to="." method="_on_input_event"]
